# random-plots-app

./: .gitignore  LICENSE  README.md  build.gradle  gradle.properties  settings.gradle
app/: build.gradle
app/schemas/com.aleespa.randomsquare.data.AppDatabase/: 2.json  3.json
app/src/main/: AndroidManifest.xml
app/src/main/assets/latex/: bubbles.tex  bw.tex  constellations.tex  cubism.tex  exponential_sum.tex  irrational_spirograph.tex  julia.tex  mandelbrot.tex  multibrot.tex  newton.tex  noise.tex  noisy_circles.tex  orbits.tex  polygon_feedback.tex  polygon_grid.tex  polygon_tunnel.tex  random_eigen.tex  soft.tex  spiral.tex  spirograph.tex  super.tex  tricorn.tex  waves.tex  zoomed_rotations.tex
app/src/main/cpp/: CMakeLists.txt  colormap.h  composition_shader.h  fractal_shader.h  fractalrenderer.cpp  jni_bridge.cpp  render_context.cpp  render_context.h
app/src/main/cpp/libs/skia/include/codec/: SkEncodedOrigin.h
app/src/main/cpp/libs/skia/include/config/: SkUserConfig.h
app/src/main/cpp/sketches/: bubbles.cpp  constellations.cpp  cubism.cpp  exponential_sum.cpp  irrational_spirograph.cpp  noisy_circles.cpp  orbits.cpp  polygon_feedback.cpp  polygon_grid.cpp  polygon_tunnel.cpp  random_circles.cpp  random_eigen.cpp  rotations.cpp  sketch_base.h  spiral.cpp  spirograph.cpp  waves.cpp
app/src/main/python/: benchmark.py  cont_spirograph.py  main.py  pyproject.toml  run.py  script_1.py  script_1.tex  script_2.py  script_3.py  scripts_dark.json  scripts_light.json  spirograph.py
app/src/main/python/Colors/: ColorSelector.py
app/src/main/python/figures/: bubbles.py  bw.py  constellations.py  cont_spirograph.py  cubism.py  exponential_sum.py  irrational_spirograph.py  noise.py  noisy_circles.py  orbits.py  polygon_feedback.py  polygon_grid.py  polygon_tunnel.py  prism.py  random_eigen.py  rotations.py  soft.py  spiral.py  spirograph.py  super.py  waves.py  zoomed_rotations.py
gradle/: gradle-daemon-jvm.properties  libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+170 files in other folders)
